# cmake_glop

./: CMakeLists.txt  README.md
.github/workflows/: windows.yml
Foo/: CMakeLists.txt
Foo/include/foo/: Foo.hpp
Foo/src/: Foo.cpp
FooApp/: CMakeLists.txt
FooApp/src/: main.cpp
ci/: Makefile
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/ubuntu/: Dockerfile
cmake/: CMakeGlopConfig.cmake.in
